--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -243,27 +243,48 @@
    "source": [
     "Now, we can compute the normalized widths (gauge couplings set to 1) via the function `calcnormwid` or also compute directly the width, given the couplings, with `calcwid`. <br>\n",
     "\n",
-    "Both functions posses as inputs the initial and final mediator mass values, `mmin` and `mmax`, respectively, and also the number of points, `step`, that will be computed. The default values for those parameters are shown below."
+    "Both functions posses as inputs the initial and final mediator mass values, `mmin` and `mmax`, respectively, and also the number of points, `step`, that will be computed in linear steps. The default values for those parameters are shown below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using hadronic width file...\n",
-      "\n",
-      " Calculating the hadron-quark transition...\n",
-      "The transition from hadrons to quarks will happen at 1.736 GeV.\n"
+      "Using hadronic width file...\n"
      ]
     }
    ],
    "source": [
     "BLmodel.calcnormwid(mmin=1e-3 ,mmax=10.0, step=10000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If, besides, one wants to choose a specific array of masses, it can use the `marr` option:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using hadronic width file...\n"
+     ]
+    }
+   ],
+   "source": [
+    "BLmodel.calcnormwid(marr = np.geomspace(1e-3,10,100000))"
    ]
   },
   {
@@ -297,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +326,7 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['e_e', 'mu_mu', 'tau_tau', 'nue_nue', 'numu_numu', 'nutau_nutau', 'quarks'])\n",
-      "0.05305164769729708\n"
+      "0.05305164769729709\n"
      ]
     }
    ],
@@ -316,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +364,7 @@
      "output_type": "stream",
      "text": [
       "dict_keys(['QCD', 'chlep', 'neutrinos', 'total'])\n",
-      "0.005395372446348472\n"
+      "0.005395372446348471\n"
      ]
     }
    ],
@@ -354,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -362,8 +383,8 @@
      "output_type": "stream",
      "text": [
       "The DM type is inelastic\n",
-      "{'DM': <scipy.interpolate.interpolate.interp1d object at 0x7fe8a007a130>}\n",
-      "0.020450724406190588\n"
+      "{'DM': <scipy.interpolate.interpolate.interp1d object at 0x7f85293ad220>}\n",
+      "0.02045072440619059\n"
      ]
     }
    ],
@@ -382,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +826,7 @@
    "source": [
     "Finally, we are ready to compute the freeze-out curves and relic densities. For this purpose we will use the main module `relic_density.py`.\n",
     "\n",
-    "The `Boltzmann` Class inherits all the variables from the `Model` Class, with the addition of the following one extra parameters:\n",
+    "The `Boltzmann` Class inherits all the variables from the `Model` Class, with the addition of the following extra parameters:\n",
     "\n",
     "- `dof` which represents the number of degrees of freedom of the DM candidate\n",
     "- `mDM` is the DM mass\n",
@@ -839,22 +860,24 @@
    "metadata": {},
    "source": [
     "If you want to reset the model free parameters {`mDM`,`gQ`,`gDM`} you can use the function `set_DM()`. <br>\n",
-    "Let us fix the structure constant $\\alpha_D = \\frac{g_{DM}^2}{4\\pi}$ to 0.1"
+    "Let us fix the structure constant $\\alpha_D = \\frac{g_{DM}^2}{4\\pi}$ to 0.1 and the gauge coupling to a value that will correctly freeze-out the iDM, for the choosen model free parameters, into the observed DM relic abundance of $\\Omega h^2 = 0.12$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "alphaD = 0.1\n",
-    "gDMnew = np.sqrt(4*np.pi*alphaD)"
+    "gDMnew = np.sqrt(4*np.pi*alphaD)\n",
+    "\n",
+    "gQnew = 6.38e-4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -866,14 +889,14 @@
     }
    ],
    "source": [
-    "BLmodelRD.set_DM(mDM=1.,gQ=6.38e-4,gDM=gDMnew)"
+    "BLmodelRD.set_DM(mDM=1.,gQ=gQnew,gDM=gDMnew)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To compute the relic density you use the `relic_density(self,xi=10.,xf=50.)` function, where (`xi`,`xf`) represent the initial and final values of the variable $x = m_{DM}/T$ that will be used to solve the system of differential Boltzmann equations."
+    "To compute the relic density $\\Omega h^2$ you use the `relic_density(self,xi=10.,xf=50.)` function, where (`xi`,`xf`) represent the initial and final values of the variable $x = m_{DM}/T$ that will be used to solve the system of differential Boltzmann equations."
    ]
   },
   {
@@ -982,18 +1005,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Thermal Rates"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The `Boltzmann` class also includes a function to compute the thermal rates $\\Gamma = \\le$"
+   ]
   }
  ],
  "metadata": {
