--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -1325,7 +1325,7 @@
     "\n",
     "To enhance computational efficiency, we have integrated a function into the code that enables parallelization, significantly accelerating the process. The function structure is given by\n",
     "\n",
-    "`parallel_tharget(self, mVarr = None, start_gq = 1e-3, nump = 10, fileN= \"target\")`\n",
+    "`parallel_target(self, mVarr = None, start_gq = 1e-3, nump = 10, fileN= \"target\")`\n",
     "\n",
     "- `mVarr` accepts the array $[m_{Z_Q}^{i}, m_{Z_Q}^{f}, N]$, which specifies the initial mediator mass value $m_{Z_Q}^{i}$, the final mediator mass value $m_{Z_Q}^{f}$, and the number of mass values $N$ to compute. If not specified, the function defaults to computing mass values in the range $0.01 - 10$ GeV.  \n",
     "\n",
@@ -1359,7 +1359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BLmodelRD.parallel_tharget()"
+    "BLmodelRD.parallel_target()"
    ]
   },
   {
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1422,15 +1422,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing hadronic width file...\n",
-      "processed up to m=2.0GeV (1859/1860 mass values) in 319.433 secondss\n",
+      "Using hadronic width file...\n",
+      "\n",
       " Calculating the hadron-quark transition...\n",
       "The transition from hadrons to quarks will happen at 1.736 GeV.\n"
      ]
@@ -1538,20 +1538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BmodDdm.parallel_tharget( mVarr = (0.01,0.3,5), start_gq = 1e-2, nump = 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BmodDdm.parallel_tharget(start_gq = 2e-3, nump = 10)"
+    "BmodDdm.parallel_target(start_gq = 2e-3, nump = 10)"
    ]
   },
   {
